@@ -1,3 +1,4 @@
+* Use new connection code from ActiveMerchant [cody]
 * Add #valid_credentials? support to all fulfillment services [cody]
 * Return 'Access Denied' message when Webgistix credenentials are invalid [cody]
 * Update Shipwire endpoint hostname [cody]
